--- a/project/pom.xml
+++ b/project/pom.xml
@@ -7,8 +7,8 @@
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.7</version>
 	</parent>
-	<groupId>com.javastaff</groupId>
-	<artifactId>bddfun</artifactId>
+	<groupId>com.javastaff.bddfun</groupId>
+	<artifactId>project</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
