--- a/project/src/main/resources/application-bddtest.yaml
+++ b/project/src/main/resources/application-bddtest.yaml
@@ -2,32 +2,34 @@ server:
   port: 8088
 
 application:
-   title: BDDFun API
-   description: BDDFun API
+  title: BDDFun API
+  description: BDDFun API
 
 spring:
-   jpa:
-      hibernate:
-         ddl-auto: none
-         naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-      properties.hibernate:
-         ddl-auto: none
-         show_sql: true
-         use_sql_comments: true
-         format_sql: true
-         default_schema: BDDFUN
-   datasource:
+  jpa:
+    hibernate:
+      ddl-auto: none
+      naming.physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+    properties.hibernate:
+      ddl-auto: none
+      show_sql: true
+      use_sql_comments: true
+      format_sql: true
+      default_schema: BDDFUN
+    datasource:
       url: jdbc:postgresql://localhost:5432/bddfun
       username: postgres
       password: postgres
       driverClassName: org.postgresql.Driver
-      initialization-mode: always
+  sql:
+    init:
+      mode: always
 
 springdoc:
-   swagger-ui.disable-swagger-default-url: false
-   override-with-generic-response: false
+  swagger-ui.disable-swagger-default-url: false
+  override-with-generic-response: false
 
-management: 
+management:
   endpoint:
     health:
       enabled: true
